k8s-manifests/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: attendo-ns
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-pod
          image: ghcr.io/samarthlambture/attendo-backend:a030daad9cc9b50e76dac2b22f437ea394493b3f
          ports:
            - containerPort: 8000
