k8s-manifests/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: attendo-ns
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db-pod
          image: postgres:latest
          ports:
            - containerPort: 5432
