k8s-manifests/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: attendo-ns
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-pod
          image: ghcr.io/samarthlambture/attendo-frontend:c172415ac1c4a67d179b31fcc43ccafb5e31ba81
          ports:
            - containerPort: 80
