k8s-manifests/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: attendo-ns
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
