k8s-manifests/backend-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: attendo-ns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api.attendoapp.site
spec:
  parentRefs:
    - name: app-alb-gateway
      namespace: default
      sectionName: https
  hostnames:
    - api.attendoapp.site
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend-service
          port: 8000
          weight: 1
